<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">testeT4</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tela2">Tela2</string>
    <string name="bt_text">Ir para Tela 2</string>
    <string name="bt_text2">Ir para Tela 1</string>
    <string name="tv_init">---------------</string>
    <string name="tv_sing">Singleton</string>
    <string name="tv_classApp">Classe Application</string>
    <string name="tv_intent">Intent</string>
    

</resources>
