<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.testet4.Tela2" >

    <TextView
        android:id="@+id/tv_tela2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <Button
        android:id="@+id/bt_tela1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_tela2"
        android:layout_marginTop="17dp"
        android:text="@string/bt_text2" />
    
    <TextView
        android:id="@+id/tv_data_with_intent_tela2"
        android:layout_below="@+id/bt_tela1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_init" />
    
    

</RelativeLayout>
